# learn_opengl_proj

./: CMakeLists.txt  README.md
includes/glad/: glad.h
includes/learnopengl/: camera.h  shader_s.h
src/: glad.c
src/1.getting_started/1.2.hello_window_clear/: main.cpp
src/1.getting_started/2.1.hello_triangle/: main.cpp
src/1.getting_started/2.2.hello_triangle_indexed/: main.cpp
src/1.getting_started/2.3.hello_triangle_exercise1/: main.cpp
src/1.getting_started/2.4.hello_triangle_exercise2/: main.cpp
src/1.getting_started/2.5.hello_triangle_exercise3/: main.cpp
src/1.getting_started/3.1.shaders_uniform/: main.cpp
src/1.getting_started/3.2.shaders_interpolation/: main.cpp
src/1.getting_started/3.3.shader_class/: main.cpp
src/1.getting_started/3.4.shaders_exercise1/: 3.4.shader.vs  main.cpp
src/1.getting_started/3.5.shaders_exercise2/: main.cpp
src/1.getting_started/3.6.shaders_exercise3/: 3.6.shader.fs  3.6.shader.vs  main.cpp
src/1.getting_started/4.1.textures/: 4.1.texture.vs  main.cpp
src/1.getting_started/4.2.textures_combined/: main.cpp
src/1.getting_started/4.3.textures_exercise1/: link.txt
src/1.getting_started/4.6.textures_exercise4/: main.cpp
src/1.getting_started/5.1.transformations/: main.cpp
src/1.getting_started/6.3.coordinate_systems_multiple/: main.cpp
src/1.getting_started/7.4.camera_class/: main.cpp
src/2.lighting/2.2.basic_lighting_specular/: main.cpp
src/2.lighting/4.2.lighting_maps_specular_map/: 4.2.lighting_maps.fs  main.cpp
src/2.lighting/5.2.light_casters_point/: 5.2.light_casters.fs
